# GOIP

./: README.md
cpp_prototype/client/: CMakeLists.txt
cpp_prototype/client/include/: helper_functions.h  simple_udp_client.h
cpp_prototype/client/src/: main.cpp  simple_udp_client.cpp
cpp_prototype/server/: CMakeLists.txt
cpp_prototype/server/include/: helper_functions.h  simple_udp_server_provider.h
cpp_prototype/server/src/: main.cpp  simple_udp_server_provider.cpp
goip/: build.sbt
goip/src/main/scala/: Client.scala  ConfigurationProvider.scala  Goip.scala  Peer.scala  Server.scala  SoundPlayer.scala  SoundPlayer2.java  SoundRecorder.scala  SoundUtil.java  SoundUtil.scala
goip/src/test/resources/: config.json
goip/src/test/scala/: ConfigurationProviderTest.scala
ncl/: CMakeLists.txt  readme.txt
ncl/configuration/: ncl_config.json
ncl/include/: configuration_reader.h  udp_connections_manager.h  udp_service_provider.h  utils.h
ncl/src/: configuration_reader.cpp  main.cpp  udp_connections_manager.cpp  udp_service_provider.cpp
python_server_prototype/: README.md  local_chat_proto.py  server.py
